press page subnav fixes

--- a/press.html
+++ b/press.html
@@ -238,7 +238,7 @@
     </div>
   </nav>
 
-  <main class="main press container container--2xl">
+  <main class="main press container">
 
     <section class="press__hero flex flex-col--lg-tablet ai-c--tablet jc-sb gap--md">
       <div class="flex flex-col ai-c--tablet gap--lg container__text">
@@ -263,8 +263,8 @@
       </div>
     </section>
 
-    <section class="animation">
-      <div class="animation__container">
+    <section class="press__animation">
+      <div class="press__animation-container">
         <div class="star star-1"></div>
         <div class="star star-2"></div>
         <div class="star star-3"></div>
@@ -301,7 +301,7 @@
       </div>
     </section>
 
-    <section id="press" class="press__release mtop--4xl">
+    <section id="press" class="press__release mtop--3xl">
       <h2 class="text__heading text--center">
         <emphasis class="text--blue">Press Releases</emphasis> & Announcements
       </h2>
@@ -310,7 +310,7 @@
         <a class="press__release-link"
           href="https://www.prnewswire.com/news-releases/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announces-the-launch-of-its-latest-revolutionary-product-the-nanopod-301885503.html"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Nano Pod Announcement</h3>
@@ -326,7 +326,7 @@
         <a class="press__release-link"
           href="https://www.nasdaq.com/articles/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel Unveils NanoPOD, A Compact And Efficient Bitcoin Mining
@@ -341,7 +341,7 @@
         <a class="press__release-link"
           href="https://www.benzinga.com/pressreleases/23/07/n33376386/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announ"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel, Announces the Launch of its Latest Revolutionary Product,
@@ -355,7 +355,7 @@
 
         <a class="press__release-link" href="https://www.investorsobserver.com/news/qm-pr/7508881838089830"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel, Announces the Launch of its Latest Revolutionary Product,
@@ -401,7 +401,7 @@
         <a class="press__release-link"
           href="https://bitcoinmagazine.com/business/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel Unveils NanoPOD, A Compact And Efficient Bitcoin Mining
@@ -416,7 +416,7 @@
         <a class="press__release-link"
           href="https://blockster.com/interview-with-scot-johnson-founder-of-digital-shovel-leading-bitcoin-mining-manufacturer"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Unpacking the Nano Pod: Digital Shovel's New Era in Bitcoin Mining</h3>
@@ -430,7 +430,7 @@
         <a class="press__release-link"
           href="https://icoholder.com/en/interview/digital-shovel-sets-the-new-trends-in-the-crypto-mining-industry"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Interview with Scot Johnson, Founder of Digital Shovel - Leading Bitcoin
@@ -446,7 +446,7 @@
         <a class="press__release-link"
           href="https://www.thestreet.com/crypto/investing/unpacking-the-nano-pod-digital-shovels-new-era-in-bitcoin-mining"
           target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 25th, 2023</small>
               <h3 class="press__release-title">Digital Shovel sets the new trends in the crypto mining industry!</h3>
@@ -487,7 +487,7 @@
 
       <div class="press__release-list mtop--lg">
         <a class="press__release-link" href="https://www.youtube.com/watch?v=sCr3okt99Yk&t=67s" target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 26th, 2023</small>
               <h3 class="press__release-title">Big Dawg Crypto Podcast Special - Scot Johnson, CEO of Digital Shovel
@@ -502,7 +502,7 @@
         </a>
 
         <a class="press__release-link" href="https://youtu.be/8gV6RMyqSkE?t=71" target="_blank">
-          <article class="press__release-post flex flex-col gap--lg">
+          <article class="press__release-post">
             <div class="flex flex-col gap--sm">
               <small class="press__release-date">July 26th, 2023</small>
               <h3 class="press__release-title">Mining Disrupt Day 1 continued</h3>
