--- a/press.html
+++ b/press.html
@@ -307,6 +307,104 @@
       </h2>
 
       <div class="press__release-list mtop--lg">
+
+        <!-- October 2023 -->
+
+        <a class="press__release-link"
+          href="https://easydailycrypto.com/digital-shovel-to-launch-new-line-of-modular-crypto-mining-centers/"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 12th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel to launch new line of modular crypto mining centers</h3>
+              <p class="press__release-body">The new product is designed to reduce transportation costs, improve
+                portability, and drive profitability for crypto miners.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/easydailycrypto.png" alt="Easy Daily Crypto Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://blockchainbytesdaily.com/business/digital-shovel-set-to-unveil-innovative-series-of-modular-crypto-mining-facilities/"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 12th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Set to Unveil Innovative Series of Modular Crypto Mining
+                Facilities</h3>
+              <p class="press__release-body">The S300 MiniPOD features a mobile design. Interestingly, It can be
+                conveniently shipped in a flat-pack configuration. Additionally, this setup is assembled with expertise
+                on-site in just four hours.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/blockchain-bytes-daily.png"
+              alt="Blockchain Bytes Daily Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://www.prnewswire.com/news-releases/digital-shovel-announces-s300-minipod-line-of-module-crypto-mining-data-centers-reducing-costs-improving-portability-and-driving-profitability-301953263.html"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Announces S300 MiniPOD Line Of Module Crypto Mining Data
+                Centers, Reducing Costs, Improving Portability And Driving Profitability</h3>
+              <p class="press__release-body">The S300 MiniPOD offers 60% reduction in transportation costs, improved pod
+                airflow, filter augmentation and more at 35% less cost than competing products.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/cision-prn.png" alt="Cision PR Newswire Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://www.thestreet.com/crypto/innovation/crypto-mining-firm-digital-shovel-announces-new-line-of-module-data-centers"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Crypto mining firm Digital Shovel announces new line of modular data
+                centers</h3>
+              <p class="press__release-body">Digital Shovel's S300 MiniPOD is designed to reduce transportation costs
+                and allow miners to optimize efficiency, anywhere they find power.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/the-street.png" alt="The Street Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://www.nasdaq.com/articles/digital-shovel-announces-s300-minipod-line-of-modular-crypto-mining-data-centers"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Announces S300 MiniPOD Line Of Modular Crypto Mining Data
+                Centers</h3>
+              <p class="press__release-body">The S300 builds on the design and functionality of Digital Shovel's
+                previous products, improving on many aspects of the installation and operation of a portable mining
+                container.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/nasdaq.png" alt="Nasdaq Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://www.bitscoins.net/digital-shovel-announces-s300-minipod-line-of-module-crypto-mining-data-centers/"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Announces S300 MiniPOD Line Of Module Crypto Mining Data
+                Centers</h3>
+              <p class="press__release-body">The S300 constructs on the style and performance of Digital Shovel's
+                previous items, enhancing on numerous elements of the setup and operation of a portable mining
+                container.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/bitscoins.png" alt="Bits n' Coins Logo">
+          </article>
+        </a>
+
+        <!-- July 2023 -->
+
         <a class="press__release-link"
           href="https://www.prnewswire.com/news-releases/digital-shovel-the-industry-leading-manufacturer-of-turnkey-mobile-crypto-mining-containers-announces-the-launch-of-its-latest-revolutionary-product-the-nanopod-301885503.html"
           target="_blank">
@@ -398,6 +496,86 @@
       </h2>
 
       <div class="press__release-list mtop--lg">
+
+        <!-- October 2023 -->
+
+        <a class="press__release-link"
+          href="https://techbullion.com/mining-for-success-exploring-the-s300-minipods-edge-in-crypto-infrastructure/"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 13th, 2023</small>
+              <h3 class="press__release-title">Mining for Success: Exploring the S300 MiniPOD's Edge in Crypto
+                Infrastructure</h3>
+              <p class="press__release-body">It's a modular crypto mining data center designed with an eye for
+                cost-efficiency and portability, marking their latest stride in enhancing profitability and tackling
+                industry challenges.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/techbullion-altoo.png" alt="Tech Bullion Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://bitcoinmagazine.com/business/digital-shovel-announces-s300-minipod-line-of-module-crypto-mining-data-centers"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Announces S300 MiniPOD Line of Modular Crypto Mining Data
+                Centers</h3>
+              <p class="press__release-body">The S300 MiniPOD offers 60% reduction in transportation costs, improved pod
+                airflow, filter augmentation and more at 35% less cost than competing products.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/bitcoin-magazine.png" alt="Bitcoin Magazine Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://blockster.com/digital-shovels-game-changing-s300-minipod-revolutionizes-crypto-mining"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel's Game-Changing S300 MiniPOD Revolutionizes Crypto Mining
+              </h3>
+              <p class="press__release-body">Digital Shovel, a leading name in the realm of crypto mining
+                infrastructure, has unveiled its latest innovation, the S300 MiniPOD. This marks a significant evolution
+                in the modular cryptocurrency mining data center space, promising reduced costs, improved portability,
+                and heightened profitability.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/blockster.png" alt="Blockster Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://crypto.news/digital-shovel-to-launch-new-line-of-modular-crypto-mining-centers/"
+          target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel to launch new line of modular crypto mining centers</h3>
+              <p class="press__release-body">Digital Shovel has launched the latest evolution of its MiniPOD line of
+                modular cryptocurrency mining data centers, the S300 MiniPOD.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/cryptonews.png" alt="Crypto News Logo">
+          </article>
+        </a>
+
+        <a class="press__release-link"
+          href="https://coinscreed.com/digital-shovel-announces-new-line-of-modular-data-centers.html" target="_blank">
+          <article class="press__release-post">
+            <div class="flex flex-col gap--sm">
+              <small class="press__release-date">October 11th, 2023</small>
+              <h3 class="press__release-title">Digital Shovel Announces New Line of Modular Data Centers</h3>
+              <p class="press__release-body">The new item is intended to save transportation costs, enhance portability,
+                and increase cryptocurrency miners' profitability.</p>
+            </div>
+            <img class="press__release-img" src="images/press-logos/coinscreed.png" alt="Coinscreed Logo">
+          </article>
+        </a>
+
+        <!-- July 2023 -->
+
         <a class="press__release-link"
           href="https://bitcoinmagazine.com/business/digital-shovel-unveils-nanopod-a-compact-and-efficient-bitcoin-mining-solution"
           target="_blank">
@@ -486,6 +664,9 @@
       </h2>
 
       <div class="press__release-list mtop--lg">
+
+        <!-- July 2023 -->
+
         <a class="press__release-link" href="https://www.youtube.com/watch?v=sCr3okt99Yk&t=67s" target="_blank">
           <article class="press__release-post">
             <div class="flex flex-col gap--sm">
