added current page highlight on navbar

--- a/awnings.html
+++ b/awnings.html
@@ -42,6 +42,7 @@
   <script defer src="/app/js/ScrollTrigger.min.js"></script>
 
   <!-- Javascript -->
+  <script defer src="/app/js/detect-current-page.js"></script>
   <script defer src="/app/js/detect-scroll-i300.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/subnav.js"></script>
