--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/contact.js"></script>
   <script defer src="/app/js/detect-location.js"></script>
+  <script defer src="/app/js/detect-current-page.js"></script>
 
   <title>Digital Shovel • Contact Us</title>
 
