--- a/nanopod.html
+++ b/nanopod.html
@@ -47,6 +47,7 @@
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js?v=1.0"></script>
   <script defer src="/app/js/subnav.js"></script>
+  <script defer src="/app/js/detect-current-page.js"></script>
   <script defer src="/app/js/subnav-title-change.js"></script>
 
   <title>Digital Shovel • NanoPOD</title>
