--- a/press.html
+++ b/press.html
@@ -44,6 +44,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/detect-scroll-press.js"></script>
+  <script defer src="/app/js/detect-current-page.js"></script>
   <script defer src="/app/js/subnav-press.js"></script>
 
   <title>Digital Shovel • Press</title>
@@ -263,7 +264,7 @@
       </div>
     </section> -->
 
-    <section class="press__animation">
+    <div class="press__animation">
       <div class="press__animation-container">
         <div class="star star-1"></div>
         <div class="star star-2"></div>
@@ -299,7 +300,7 @@
           </g>
         </svg>
       </div>
-    </section>
+    </div>
 
     <section id="announcements" class="press__release">
       <h2 class="text__heading text--center">
@@ -648,6 +649,7 @@
         </svg>
       </a>
     </div>
+    
   </main>
 
   <footer class="footer">
