--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -43,6 +43,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/detect-current-page.js"></script>
 
   <title>Digital Shovel • Turn-Key Solutions</title>
 
