--- a/i300.html
+++ b/i300.html
@@ -43,6 +43,7 @@
 
   <!-- Javascript -->
   <script defer src="/app/js/detect-scroll-i300.js"></script>
+  <script defer src="/app/js/detect-current-page.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/subnav.js"></script>
