--- a/press.html
+++ b/press.html
@@ -191,22 +191,22 @@
                   <small>Cooling Solution</small>
                 </div>
               </a> -->
-              <!-- <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
-                    <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
-                    <div class="dropdown__text">
-                      <h5>
-                        SmartPDU
-                        <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
-                          xmlns="http://www.w3.org/2000/svg">
-                          <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                          <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                        </svg>
-                      </h5>
-                      <small>Automation & Monitor</small>
-                    </div>
-                  </a> -->
+              <a class="dropdown__menu-item dropdown__link" href="spdu" tabindex="-1" aria-role="menu-item">
+                <img class="icon--md" src="images/icons/icon_navbar_spdu.svg" alt="SPDU Icon" aria-hidden="true" />
+                <div class="dropdown__text">
+                  <h5>
+                    SmartPDU
+                    <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
+                      xmlns="http://www.w3.org/2000/svg">
+                      <path d="M7.49 6L7.5 6" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                      <path d="M2.5 1L7.95455 6L2.5 11" stroke="var(--blue-900)" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                    </svg>
+                  </h5>
+                  <small>Automation & Monitoring</small>
+                </div>
+              </a>
             </div>
           </div>
         </li>
@@ -222,23 +222,7 @@
       </ul>
     </div>
   </nav>
-
-  <!-- <nav class="subnav">
-    <div class="subnav__container">
-      <ul class="subnav__links">
-        <li>
-          <a class="subnav__link subnav__link--announcements subnav__link--active">Press Releases</a>
-        </li>
-        <li>
-          <a class="subnav__link subnav__link--articles">Original Articles</a>
-        </li>
-        <li>
-          <a class="subnav__link subnav__link--podcasts">Podcasts & Mentions</a>
-        </li>
-      </ul>
-    </div>
-  </nav> -->
-
+  
   <main class="main press container">
 
     <div class="press__animation">
@@ -687,7 +671,7 @@
             <li><a href="nanopod" class="footer__list-item">NanoPOD</a></li>
             <li><a href="awnings" class="footer__list-item">Air-Intake Awnings</a></li>
             <!-- <li><a href="fans" class="footer__list-item">Cooling Fans</a></li> -->
-            <!-- <li><a href="i300" class="footer__list-item">SmartPDU</a></li> -->
+            <li><a href="spdu" class="footer__list-item">SmartPDU</a></li>
           </ul>
         </div>
         <div class="footer__column">
@@ -705,8 +689,10 @@
           <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
+          <a target="_blank" href="https://www.youtube.com/@digital_shovel"><img class="footer__social"
+            src="images/icons/icon_youtube.svg" alt="YouTube Logo Icon"></a>
           <a target="_blank" href="https://www.instagram.com/digital_shovel/"><img class="footer__social"
-              src="images/icons/icon_instagram.svg" alt="Facebook Logo Icon"></a>
+              src="images/icons/icon_instagram.svg" alt="Instagram Logo Icon"></a>
           <a target="_blank" href="https://twitter.com/Digital_Shovel"><img class="footer__social"
               src="images/icons/icon_twitter.svg" alt="Twitter Logo Icon"></a>
           <a target="_blank" href="https://ca.linkedin.com/company/digital-shovel"><img class="footer__social"
