--- a/spdu.html
+++ b/spdu.html
@@ -12,11 +12,11 @@
     content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
 
   <!-- Social media tags -->
-  <meta property="og:title" content="Digital Shovel • NanoPOD">
+  <meta property="og:title" content="Digital Shovel • PDU">
   <meta property="og:description"
-    content="Digital Shovel, the industry leading manufacturer of turnkey, mobile crypto mining containers, has announced the launch of their latest innovation, the NanoPOD. Designed specifically for small to medium mining operations, the NanoPOD stands out as the company's most compact and efficient offering to date, setting a new standard in size and convenience.">
+    content="Digital Shovel helps businesses scale Crypto-Mining operations with turn-key mobile units. With low energy cost, and high security, we help businesses with managed and unmanaged miner hosting.">
   <meta property="og:image" content="/images/backgrounds/meta-image.jpg">
-  <meta property="og:url" content="/nanopod.html">
+  <meta property="og:url" content="/awnings.html">
   <meta property="og:site_name" content="Digital Shovel">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image:alt" content="Digital Shovel Logo">
@@ -42,15 +42,15 @@
   <script defer src="/app/js/ScrollTrigger.min.js"></script>
 
   <!-- Javascript -->
+  <script defer src="/app/js/detect-current-page.js"></script>
   <script defer src="/app/js/detect-scroll-i300.js"></script>
   <script defer src="/app/js/nav-toggle.js"></script>
+  <script defer src="/app/js/subnav.js"></script>
+  <script defer src="/app/js/subnav-title-change.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/gallery.js?v=1.0"></script>
-  <script defer src="/app/js/subnav.js"></script>
-  <script defer src="/app/js/detect-current-page.js"></script>
-  <script defer src="/app/js/subnav-title-change.js"></script>
 
-  <title>Digital Shovel • NanoPOD</title>
+  <title>Digital Shovel • PDU</title>
 
   <!-- Hotjar Tracking Code for https://digitalshovel.com/ -->
   <script>
@@ -230,37 +230,51 @@
     <div class="subnav__container">
       <ul class="subnav__links">
         <li>
-          <a class="subnav__link subnav__link--product subnav__link--active">Product</a>
+          <a href="#product" class="subnav__link subnav__link--product subnav__link--active">Product</a>
         </li>
         <li>
-          <a class="subnav__link subnav__link--specs">Specifications</a>
+          <a href="#specifications" class="subnav__link subnav__link--specs">Specifications</a>
         </li>
         <li>
-          <a class="subnav__link subnav__link--bundle">Bundle</a>
+          <a href="#bundle" class="subnav__link subnav__link--bundle">Features</a>
         </li>
       </ul>
     </div>
   </nav>
 
   <main class="main">
-    <section id="product" class="container container--i300 flex flex-col ai-c">
+    <section id="product" class="container container--i300 flex flex-col ai-c gap--xlg">
       <div class="flex flex-col ai-c gap--sm">
         <div class="flex flex-col--sm-mobile ai-c gap--sm">
-          <h4>Indoor/Outdoor Solution</h4>
+          <h4>Power Distribution System</h4>
         </div>
         <h1 class="hero__heading">
-          <emphasis class="text--blue">Nano</emphasis>POD
+          <emphasis class="text--blue">Smart</emphasis> Power Distribution Unit
         </h1>
       </div>
-      <div class="flex flex-col--sm-tablet ai-c gap--lg">
-        <img class="hero__product-illustration" src="images/illustrations/nanopod_back.svg"
-          alt="NanoPOD Back View Illustration">
+      <div class="flex flex-col ai-c gap--lg">
+        <img class="hero__product-photo hero__product-photo--pdu" src="images/photos/pdu/pdu_top-view_alpha_v1.webp"
+          alt="PDU Top Side Photo">
         <div class="gallery-container">
-          <div class="gallery gallery__i300">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_back.png" alt="NanoPOD Back View">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_side.png" alt="NanoPOD Side View">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_open-door.png" alt="NanoPOD Side View with Open Door">
-            <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_inside.png" alt="NanoPOD Inside View">
+          <div class="gallery gallery__awnings">
+            <img class="photo photo-1 photo__pdu" src="images/photos/pdu/pdu_close-view_breaker.webp"
+              alt="Awnings on the Minipod M300 Side View">
+            <img class="photo photo-2 photo__pdu" src="images/photos/pdu/pdu_close-view_phase-1.webp"
+              alt="Single Awning Top View">
+            <img class="photo photo-3 photo__pdu" src="images/photos/pdu/pdu_close-view_phase-2.webp"
+              alt="Awning Rack Side View">
+            <img class="photo photo-4 photo__pdu" src="images/photos/pdu/pdu_close-view_phase-3.webp"
+              alt="Awning Rack Back View">
+            <img class="photo photo-5 photo__pdu" src="images/photos/pdu/pdu_top-view_v1.png"
+              alt="Single Awning Back View">
+            <img class="photo photo-6 photo__pdu" src="images/photos/pdu/pdu_top-view_v2.png"
+              alt="Double Awnings Packaged View">
+            <img class="photo photo-7 photo__pdu" src="images/photos/pdu/pdu_top-view_v3.png"
+              alt="Single Awning Top View">
+            <img class="photo photo-8 photo__pdu" src="images/photos/pdu/pdu_top-view_v4.png"
+              alt="Awnings on the Minipod M300 Side View">
+            <img class="photo photo-9 photo__pdu" src="images/photos/pdu/pdu_side-view_v1.png"
+              alt="Awnings on the Minipod M300 Side View">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
@@ -316,61 +330,31 @@
         <path d="M2.5 1L7.95455 6L2.5 11" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </a>
-    <section id="specifications" class="card__grid card__grid--i300">
-      <div class="card__combined flex flex-col">
-        <div class="card-1 card__list flex flex-col gap--md">
-          <div class="flex gap--sm ai-c">
-            <img class="icon--md" src="images/icons/icon_power.svg" alt="Power Input Icon">
-            <h6>Power Input</h6>
-          </div>
-          <ul class="flex flex-col gap--md">
-            <li class="card__list-item flex">Single Phase 208v (NA & EU compatible)</li>
-            <li class="card__list-item flex">Three Phase 415-380v & 208v</li>
-          </ul>
-        </div>
-        <div class="card-5 card__list flex flex-col gap--md">
-          <div class="flex gap--sm ai-c">
-            <img class="icon--md" src="images/icons/icon_mining.svg" alt="Mining Capacity Icon">
-            <h6>Mining Capacity</h6>
-          </div>
-          <ul class="flex flex-col gap--md">
-            <li class="card__list-item flex">Up to 120kW capacity</li>
-            <li class="card__list-item flex">x27 Bitmain S19 Miners</li>
-            <li class="card__list-item flex">x35 Whatsminer</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card-2 card__list flex flex-col gap--md">
+    <section id="specifications" class="card__grid card__grid--awnings">
+      <div class="card-1 card__list flex flex-col gap--md">
         <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_spdu.svg" alt="Smart Power Distribution Icon">
+          <img class="icon--md" src="images/icons/icon_spdu.svg" alt="SMart Power Distribution Unit Icon" />
           <h6>Smart Power Distribution Unit (SPDU)</h6>
         </div>
         <ul class="flex flex-col gap--md">
-          <li class="card__list-item flex">Individual circuit wattage monitoring</li>
-          <li class="card__list-item flex">Remove manual & automatic switching of each circuit</li>
-          <li class="card__list-item flex">Atmospheric monitoring system</li>
+          <li class="card__list-item flex">Each MINIPOD is equipped with two SPDUs</li>
+          <li class="card__list-item flex">96 – C19 outlets with a 20A dedicated breaker per outlet</li>
+          <li class="card__list-item flex">Allows max wattage while providing max protection</li>
           <li class="card__list-item flex">Individual port monitoring and switching</li>
-          <li class="card__list-item flex">Automated fan control</li>
+          <li class="card__list-item flex">Fitted with a UL 489 Listed 350A 3 phase main breaker, tied to a common overhead mounted busway</li>
         </ul>
       </div>
-      <div class="card-5 card__list flex flex-col gap--md">
-        <div class="flex gap--sm ai-c">
-          <img class="icon--md" src="images/icons/icon_fan.svg" alt="Mining Capacity Icon">
-          <h6>Ventilation & Filtration</h6>
-        </div>
-        <ul class="flex flex-col gap--md">
-          <li class="card__list-item flex">x6 Awning Based intakes with <br> x6 MERV 5-13 Filters 24” x 24” x 4”</li>
-          <li class="card__list-item flex">x6 2100CFM Blower Fans</li>
-          <li class="card__list-item flex">Proprietary heat vectoring system for optional heat recycling</li>
-          <li class="card__list-item flex">Hot-air recirculation blower</li>
-        </ul>
+      <div class="card-2 card__data card__secondary flex ai-c gap--md">
+        <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Fan Icon">
+        <h6>Feature here</h6>
+        <h6 class="text--blue">Details here</h6>
       </div>
-      <div class="card-7 card__data card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Total Power Capacity Icon">
-        <h6>Total Capacity</h6>
-        <h6 class="text--blue">Up to 120kW</h6>
+      <div class="card-3 card__data flex ai-c gap--md">
+        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
+        <h6 class="text--dark-blue">Approx. Cost</h6>
+        <h6 class="text--blue">$997 - 1,497</h6>
       </div>
-      <a href="contact" class="card-8 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
+      <a href="contact" class="card-4 btn btn--primary btn--card flex ai-c jc-c gap--sm">Place Order
         <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
           xmlns="http://www.w3.org/2000/svg">
           <path d="M7.49 6L7.5 6" stroke="var(--blue-50)" stroke-width="2" stroke-linecap="round"
@@ -379,24 +363,14 @@
             stroke-linejoin="round" />
         </svg>
       </a>
-      <div class="card-9 card__data flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
-        <h6 class="text--dark-blue">Approx. Cost</h6>
-        <h6 class="text--blue text--strikethrough-small">$19,900</h6>
-        <h6 class="text--blue text--emphasis">$15,000</h6>
-      </div>
     </section>
     <section id="bundle" class="bundle">
       <div class="container container--full-width flex flex-col gap--md ai-c jc-c">
         <h2 class="text__heading">
-          <span class="text--blue">Bundled</span> with your NanoPOD
+          Include with your <span class="text--blue">SPDU</span>
         </h2>
-        <p class="text__body text--center">
-          Main container, racking, back-sheets, and Smart PDUs
-        </p>
-        <div class="bundle__illustrations bundle__illustrations--i300">
-          <img src="images/illustrations/nanopod-front_with-text.svg" alt="NanoPOD Illustration Front Side">
-          <img src="images/illustrations/nanopod-back_with-text.svg" alt="NanoPOD Illustration Back Side">
+        <div class="bundle__illustrations">
+          <img src="images/photos/pdu/pdu_features.webp" alt="Awnings Illustration Front Side">
           <div class="minipod__illustrations--shadow"></div>
         </div>
         <a href="contact" class="btn btn--primary mtop--2xl mbot--lg">Contact Sales
