--- a/spdu.html
+++ b/spdu.html
@@ -370,7 +370,7 @@
           Include with your <span class="text--blue">SPDU</span>
         </h2>
         <div class="bundle__illustrations">
-          <img src="images/photos/pdu/pdu_features.webp" alt="Awnings Illustration Front Side">
+          <img src="images/photos/pdu/spdu_features.png" alt="Smart Power Distribution Unit Features">
           <div class="minipod__illustrations--shadow"></div>
         </div>
         <a href="contact" class="btn btn--primary mtop--2xl mbot--lg">Contact Sales
