changed class names for galleries

--- a/awnings.html
+++ b/awnings.html
@@ -256,7 +256,7 @@
         <img class="hero__product-illustration" src="images/illustrations/awnings.svg"
           alt="Awnings Front Side Illustration">
         <div class="gallery-container">
-          <div class="gallery gallery__awnings">
+          <div class="gallery gallery__3x3">
             <img class="photo photo-1 photo__awning" src="images/photos/minipod/M300-side-2.jpg"
               alt="Awnings on the Minipod M300 Side View">
             <img class="photo photo-2 photo__awning" src="images/photos/awnings/awning-1.png" alt="Single Awning Top View">
