--- a/i300.html
+++ b/i300.html
@@ -266,7 +266,7 @@
       <div class="flex flex-col--sm-tablet ai-c gap--lg">
         <img class="hero__product-illustration" src="images/illustrations/i300.svg" alt="i300 Minipod Illustration">
         <div class="gallery-container">
-          <div class="gallery gallery__i300">
+          <div class="gallery gallery__col-1">
             <img class="photo photo-1 photo__i300" src="images/photos/minipod/i300-back.jpg"
               alt="i300 Minipod Back View">
             <img class="photo photo-2 photo__i300" src="images/photos/minipod/i300-front.jpg"
