--- a/m300.html
+++ b/m300.html
@@ -453,8 +453,8 @@
           </button>
         </div>
       </div>
-      <div class="gallery__m300-container">
-        <div class="gallery gallery__m300">
+      <div class="gallery__3x2-container">
+        <div class="gallery gallery__3x2">
           <img class="photo photo__m300 photo-3" src="images/photos/minipod/M300-back-1.jpg"
             alt="M300 Minipod Back View Angle 1" />
           <img class="photo photo__m300 photo-4" src="images/photos/minipod/M300-back-2.jpg"
