--- a/nanopod.html
+++ b/nanopod.html
@@ -256,7 +256,7 @@
         <img class="hero__product-illustration" src="images/illustrations/nanopod_back.svg"
           alt="NanoPOD Back View Illustration">
         <div class="gallery-container">
-          <div class="gallery gallery__i300">
+          <div class="gallery gallery__col-1">
             <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_back.png" alt="NanoPOD Back View">
             <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_side.png" alt="NanoPOD Side View">
             <img class="photo photo-1 photo__i300" src="images/photos/nanopod/nano_open-door.png" alt="NanoPOD Side View with Open Door">
