--- a/spdu.html
+++ b/spdu.html
@@ -256,7 +256,7 @@
         <img class="hero__product-photo hero__product-photo--pdu" src="images/photos/pdu/pdu_top-view_alpha_v1.webp"
           alt="PDU Top Side Photo">
         <div class="gallery-container">
-          <div class="gallery gallery__awnings">
+          <div class="gallery gallery__3x3">
             <img class="photo photo-1 photo__pdu" src="images/photos/pdu/pdu_close-view_breaker.webp"
               alt="Awnings on the Minipod M300 Side View">
             <img class="photo photo-2 photo__pdu" src="images/photos/pdu/pdu_close-view_phase-1.webp"
