--- a/pages/fans.html
+++ b/pages/fans.html
@@ -252,7 +252,7 @@
       <div class="flex flex-col--sm-tablet ai-c gap--lg">
         <img class="hero__product-illustration" src="images/illustrations/fan_front.svg" alt="Fan Front Illustration">
         <div class="gallery-container">
-          <div class="gallery gallery__i300">
+          <div class="gallery gallery__col-1">
             <img class="photo photo-1 photo__i300" src="images/photos/minipod/M300-back-1.jpg"
               alt="Fans on the Minipod M300 Back View">
             <img class="photo photo-2 photo__i300" src="images/photos/fans/fans-inside.png"
