changed features img, added more spec info, added responsiveness

--- a/spdu.html
+++ b/spdu.html
@@ -258,23 +258,23 @@
         <div class="gallery-container">
           <div class="gallery gallery__3x3">
             <img class="photo photo-1 photo__pdu" src="images/photos/pdu/pdu_close-view_breaker.webp"
-              alt="Awnings on the Minipod M300 Side View">
+              alt="SmartPDU Close View of Main Breaker">
             <img class="photo photo-2 photo__pdu" src="images/photos/pdu/pdu_close-view_phase-1.webp"
-              alt="Single Awning Top View">
+              alt="SmartPDU Close View of Phase 1">
             <img class="photo photo-3 photo__pdu" src="images/photos/pdu/pdu_close-view_phase-2.webp"
-              alt="Awning Rack Side View">
+              alt="SmartPDU Close View of Phase 2">
             <img class="photo photo-4 photo__pdu" src="images/photos/pdu/pdu_close-view_phase-3.webp"
-              alt="Awning Rack Back View">
+              alt="SmartPDU Close View of Phase 3">
             <img class="photo photo-5 photo__pdu" src="images/photos/pdu/pdu_top-view_v1.png"
-              alt="Single Awning Back View">
+              alt="Angled Top View of the Entire SmartPDU">
             <img class="photo photo-6 photo__pdu" src="images/photos/pdu/pdu_top-view_v2.png"
-              alt="Double Awnings Packaged View">
+              alt="Angled Top View of the Entire SmartPDU">
             <img class="photo photo-7 photo__pdu" src="images/photos/pdu/pdu_top-view_v3.png"
-              alt="Single Awning Top View">
+              alt="Direct Top View of the Entire SmartPDU">
             <img class="photo photo-8 photo__pdu" src="images/photos/pdu/pdu_top-view_v4.png"
-              alt="Awnings on the Minipod M300 Side View">
+              alt="Direct Horizontal Top View of the Entire SmartPDU">
             <img class="photo photo-9 photo__pdu" src="images/photos/pdu/pdu_side-view_v1.png"
-              alt="Awnings on the Minipod M300 Side View">
+              alt="Horizontal Side View of the Entire SmartPDU">
             <div class="modal">
               <div class="modal-container">
                 <span class="close">
@@ -345,9 +345,9 @@
         </ul>
       </div>
       <div class="card-2 card__data card__secondary flex ai-c gap--md">
-        <img class="icon--md" src="images/icons/icon_power-capacity.svg" alt="Fan Icon">
-        <h6>Feature here</h6>
-        <h6 class="text--blue">Details here</h6>
+        <img class="icon--md" src="images/icons/icon_dimensions.svg" alt="Fan Icon">
+        <h6>Dimensions</h6>
+        <h6 class="text--blue">11.24" x 84" x 4.75"</h6>
       </div>
       <div class="card-3 card__data flex ai-c gap--md">
         <img class="icon--md" src="images/icons/icon_coin.svg" alt="Dollar Coin Icon">
@@ -370,8 +370,7 @@
           Include with your <span class="text--blue">SPDU</span>
         </h2>
         <div class="bundle__illustrations">
-          <img src="images/photos/pdu/spdu_features.png" alt="Smart Power Distribution Unit Features">
-          <div class="minipod__illustrations--shadow"></div>
+          <img class="bundle__illustrations--spdu" src="images/photos/pdu/spdu_features.png" alt="Smart Power Distribution Unit Features">
         </div>
         <a href="contact" class="btn btn--primary mtop--2xl mbot--lg">Contact Sales
           <svg class="btn__chevron" width="13" height="12" viewBox="0 0 13 12" fill="none"
