added copyright script to change year automatically

--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
   <script defer src="/app/js/contact.js"></script>
   <script defer src="/app/js/detect-location.js"></script>
   <script defer src="/app/js/detect-current-page.js"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel • Contact Us</title>
 
