--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/scroll-animations-home.js?v=1.0"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel</title>
 
