--- a/interview-next-steps.html
+++ b/interview-next-steps.html
@@ -39,6 +39,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel • Interview Next Steps</title>
 
