--- a/m300.html
+++ b/m300.html
@@ -50,6 +50,7 @@
   <script defer src="/app/js/subnav.js"></script>
   <script defer src="/app/js/subnav-title-change.js"></script>
   <script defer src="/app/js/detect-current-page.js"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel • M300 Minipod</title>
 
