--- a/press.html
+++ b/press.html
@@ -46,6 +46,7 @@
   <script defer src="/app/js/detect-scroll-press.js"></script>
   <script defer src="/app/js/detect-current-page.js"></script>
   <script defer src="/app/js/subnav-press.js"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel • Press</title>
 
