--- a/turnkey-solutions.html
+++ b/turnkey-solutions.html
@@ -44,6 +44,7 @@
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
   <script defer src="/app/js/detect-current-page.js"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel • Turn-Key Solutions</title>
 
