--- a/nanopod.html
+++ b/nanopod.html
@@ -49,6 +49,7 @@
   <script defer src="/app/js/subnav.js"></script>
   <script defer src="/app/js/detect-current-page.js"></script>
   <script defer src="/app/js/subnav-title-change.js"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel • NanoPOD</title>
 
