--- a/recruitment.html
+++ b/recruitment.html
@@ -43,6 +43,7 @@
   <!-- Javascript -->
   <script defer src="/app/js/nav-toggle.js"></script>
   <script defer src="/app/js/dropdown.js"></script>
+  <script defer src="/app/js/copyright.js"></script>
 
   <title>Digital Shovel • Recruitment</title>
 
