--- a/awnings.html
+++ b/awnings.html
@@ -415,7 +415,7 @@
       <div class="footer__divider"></div>
       <div class="flex flex-col--lg-tablet jc-sb gap--sm">
         <div class="flex flex-col--lg-tablet gap--sm">
-          <small class="footer__copyright">© 2023 Digital Shovel Holdings Inc.</small>
+          <small class="footer__copyright">© <span class="footer__copyright-year">2023</span> Digital Shovel Holdings Inc.</small>
         </div>
         <div class="flex gap--sm ai-c">
           <a target="_blank" href="https://www.youtube.com/@digital_shovel"><img class="footer__social"
